✨feature: add caching for Tmap API calls