@@ -7,9 +7,10 @@ import com.kok.kokapi.public_transportation.adapter.in.dto.RouteResponse;
 import com.kok.kokcore.public_transfortation.usecase.RetrievePublicTransportationUsecase;
 import io.swagger.v3.oas.annotations.Operation;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.util.Pair;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
+
+import java.util.List;
 
 @RestController
 @RequiredArgsConstructor
@@ -20,11 +21,11 @@ public class PublicTransfortationController extends BaseController {
     @Operation(summary = "대중교통 조회", description = "Retrieve the total time and transfer count for a route using the station ID")
     @PostMapping("/route/{stationId}")
     public ResponseEntity<ApiResponseDto<RouteResponse>> getPublicTransportation(@PathVariable Long stationId, @RequestBody RouteRequest routeRequest) {
-        Pair<Integer, Integer> publicTransportation =
+        List<Integer> publicTransportation =
                 retrievePublicTransportationUsecase.retrievePublicTransportation(stationId, routeRequest.UUID(), routeRequest.memberId());
 
         return ResponseEntity.ok(ApiResponseDto.success(
-                RouteResponse.of(publicTransportation.getFirst(), publicTransportation.getSecond())
+                RouteResponse.of(publicTransportation.get(0), publicTransportation.get(1))
         ));
     }
 
